--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -8,9 +8,9 @@
 <div class="container">
     
     
-    lista prueba
+    
     <div th:if="${not #lists.isEmpty(nivelescolaridades)}">
-        <h2>Todos los niveles de escolaridad</h2>
+        <h3 align="center" >Lista de Niveles Escolares</h3>
         <table class="table table-striped">
             <tr>
                 <th>Centro Educativo</th>
@@ -22,7 +22,7 @@
                    <th>Fecha desde</th>
                    <th>Fecha hasta</th>
                    <th>Acciones</th>
-                   <th> hola</th>
+                   
                 
             </tr>
             <tr th:each="nivelescolaridad : ${nivelescolaridades}">
@@ -39,11 +39,62 @@
                 <td>
                  <a th:href="${'./show/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-default">Mostrar</a>
                 <a th:href="${'./edit/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-danger">Delete</a>
+                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${nivelescolaridad.codigonivelnivelescolaridad} + '\');'" >Delete</a></td>
+                <!--<a th:href="${'./delete/' + nivelescolaridad.codigonivelnivelescolaridad}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
         </table>
     </div>
 </div>
+     <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../roles/';
+       }); 
+}
+    if([[${msg}]]===0){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro ingresado correctamente",
+                type: "success",
+                icon: "success",
+       }) 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </body>
 </html>
