--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -216,7 +216,7 @@
             <th:block th:include="../templates/footer"></th:block>
         </div>
 
-        
+  </div>      
        
 </body>
 <script src="../static/css/hydro/js/jquery.js"></script>
