--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitaciones.html
@@ -12,18 +12,30 @@
             <table class="table table-striped">
                 <tr>
                     <th>Codigo de Asistencia de Capacitacion</th>
-<!--                    <th>Codigo Capacitacion</th>-->
+                     <th>Capacitacion</th>
+                      <th>Empleado</th>
+                       <th>Puesto</th>
+                        <th>Ubicacion Fisica</th>
                     <th>Horas Recibidas</th>
                     <th>Ubicacion Asistentes Capacitacion</th>
-
+                   
+                     <th>Telefono</th>
+                      <th>Correo</th>
+                    
                     <th>Acciones</th>
 
                 </tr>
                 <tr th:each="asistenciacapacitacion : ${asistenciacapacitaciones}">
                     <td th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">Codigo</td>
+                       <td th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Capacitacion</td>
+<!--                        <td th:text="${asistenciacapacitacion.nombreempleado}">Empleado</td>
+                         <td th:text="${asistenciacapacitacion.nombrepuesto}">Puesto</td>-->
+                          <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica</td>
                     <td th:text="${asistenciacapacitacion.horasrecibidas}">Horas Recibidas</td>
-                    <td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>
-<!--                    <td th:text="${asistenciacapacitacion.codigocapacitacion}">Codigo Capacitacion</td>-->
+                    <!--<td th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion de Capacitacion</td>-->
+                 
+                      <td th:text="${asistenciacapacitacion.telefono}">Telefono</td>
+                        <td th:text="${asistenciacapacitacion.email}">Correo</td>
 
 
                     <td>
@@ -36,4 +48,79 @@
         </div>
     </div>
 </body>
+ <script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../costocapacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+<script>
+    $(document).ready(function () {
+        $('#fechapresentacion').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        
+        
+    });
+</script>
+  
+     <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../costocapacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </html>
