--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -1,58 +1,134 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  
-<head lang="en">
-
+    <head lang="en">
     <title>Nueva Asistencia Capacitacion</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
-    <div>
-        <form class="form-horizontal" th:object="${asistenciacapacitacion}" th:action="@{../asistenciacapacitacion}" method="post">
-          <input type="hidden" th:field="*{codigoasistenciacapacitacion}"/>
-            <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Horas Recibidas:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{horasrecibidas}"/>
-                </div>
-            </div>
-           
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Ubicacion Fisica de las asistencias:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{ubicacionasistenciacapacitacion}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo Capaitacion:</label>
-                <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
-                </div>
-            </div>
-            
-           
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
-        </form>
-    </div>
-</div>
-<script>
-    $(document).ready(function () {
-        $('#fechadesdecomite').datepicker({
-            dateFormat: 'yy-mm-dd'
-        });
+    <div class="row">
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div> 
+        <div class="col-md-8">
+            <h3 align="center">Nueva Asistencias de Capacitacion</h3>
+            <div>
+                <form class="form-horizontal" id="formascap" th:object="${formasistenciacapacitancion}" th:action="@{../asistenciacapacitacion}" method="post">
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Capacitacion:</label>
+                        <div class="col-sm-10" >
+                            <select class="form-control" name="codigocapacitacion.codigocapacitacion" >
+                                <option th:each="c:${formasistenciacapacitancion.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" onkeypress="return valida(event)" th:field="*{codigoempleado.codigoempleado}"/>-->
+                        </div>
+                    </div>
 
-        $('#fechahastacomite').datepicker({
-            dateFormat: 'yy-mm-dd'
+ 
+                     <div class="form-group">
+                        <label class="col-sm-2 control-label ">codigo empleado:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" name="codigoempleado"/>
+                        </div>
+                    </div>
+
+                   
+                                 <div class="form-group">
+                        <label class="col-sm-2 control-label">Empleado:</label>
+                        <div class="col-sm-10">
+                            <!--<select class="form-control" id="combo" th:field="*{asistenciaCapacitacion.codigoempleado.codigoempleado}" >-->
+                            <select class="form-control" id="combo"  >
+                            <option value="0">-- Seleccione un empleado --</option>
+                            <option th:each="d:${formasistenciacapacitancion.empleados}" th:value="${d.codigoempleado}" th:text="${d.nombreempleado}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" th:field="*{formasistenciacapacitancion.codigoempleado.codigoempleado}"/>-->
+                            <!--<input type="text" class="form-control" th:field="*{formasistenciacapacitancion.codigoempleado.codigoempleado}"/>-->
+                        </div>
+                                        </div>
+                     <div class="form-group">
+                        <label class="col-sm-2 control-label ">Horas Recibidas:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" maxlength="3" name="horasrecibidas"/>
+                        </div>
+                    </div>
+                   
+
+
+                   
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label ">puesto:</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="puesto" class="form-control" maxlength=""required="true" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label ">ubicacion fisica:</label>
+                        <div class="col-sm-10">
+                            <input type="text" id="ubicacion" class="form-control " required="true" name="ubicacionasistenciacapacitacion" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label ">Telefono:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control num_telefono" required="true" name="telefono"/>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Correo:</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" required="true" name="email"/>
+                        </div>
+                    </div>
+
+                    <!--             <div class="form-group">
+                                    <label class="col-sm-2 control-label">Responsable del Comite:</label>
+                                                         <div class="col-sm-10">
+                                                             <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                                                    <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
+                                                </select>
+                                   <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
+                                                              </div>
+                                                    </div>-->
+
+
+                    <div class="col-md-12">
+                        <div class="row" align="center">
+                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
+                            <button type="submit" class="btn btn-default">Guardar</button>
+                            <button type="reset" class="btn btn-default">Limpiar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+    </div>
+
+    <script th:inline="javascript">
+        $(document).ready(function () {
+            $('#fechadesdecomite').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
+
+            $('#fechahastacomite').datepicker({
+                dateFormat: 'yy-mm-dd'
+            });
+            $('#combo').change(function(){
+                 $.ajax({
+                    url : '../llenadocombo/' + $( this ).val().toString(),
+                    success : function(data) {
+                        $('#ubicacion').val(data[1]);
+                        $('#puesto').val(data[0]);
+                    },
+                    error: function() {
+                        $('#ubicacion').val("");
+                        $('#puesto').val("");
+                    }
         });
-    });
-</script>
+        });
+        });
+    </script>
 
 </body>	
 </html>
