--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionshow.html
@@ -23,6 +23,16 @@
                             <div class="col-sm-7">
                                 <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">codigo de comite</p></div>
                         </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">codigoempleado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigoempleado}">codigo de comite</p></div>
+                        </div>
+                         <div class="form-group">
+                            <label class="col-sm-5 control-label">Nombre de empleado:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigoasistenciacapacitacion}">codigo de comite</p></div>
+                        </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Horas Recibidas:</label>
                             <div class="col-sm-7">
@@ -36,9 +46,27 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-sm-5 control-label">codigo de Capacitacion:</label>
+                            <label class="col-sm-5 control-label">Capacitacion:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion}">Codigo de Capacitacion</p>
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.codigocapacitacion.nombrecapacitacion}">Codigo de Capacitacion</p>
+                            </div>
+                             <div class="form-group">
+                            <label class="col-sm-5 control-label">Ubicacion fisica:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.ubicacionasistenciacapacitacion}">Ubicacion Fisica de Capacitacion</p>
+                            </div>
+                        </div>
+                        </div>
+                          <div class="form-group">
+                            <label class="col-sm-5 control-label">Telefono:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.telefono}">Codigo de Capacitacion</p>
+                                  <div class="form-group">
+                            <label class="col-sm-5 control-label">Correo:</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${asistenciacapacitacion.email}">Codigo de Capacitacion</p>
+                            </div>
+                        </div>
                             </div>
                         </div>
                         
@@ -52,8 +80,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="submit" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
-
+                                       <button type="button" class="btn btn-default"><a href="#" th:href="@{/asistenciacapacitaciones/}">Regresar</a></button>
                     </div>
                 </div>
             </div>
