--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -4,144 +4,201 @@
     <head lang="en">
 
         <title>Nueva Capacitacion</title>
+         <th:block th:include="../templates/header"></th:block>
+        <link rel="stylesheet"
+	th:href="@{/css/bootstrap.min.css}" />
+<link rel="stylesheet"
+	th:href="@{/css/jquery-ui.min.css}" />
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-    <div class="container">
-        <h2>detalle de Capacitacion</h2>
-        <div>
-            <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
-               
-                <input type="hidden" th:field="*{codigocapacitacion}"/>
-    
+    <div class="row">
+        <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div> 
+        <div class="col-md-8">
+            <h3>Nueva Capacitacion</h3>
+            <div>
+                <form class="form-horizontal" th:object="${capacitacion}" th:action="@{../capacitacion}" method="post">
 
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre de Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{nombrecapacitacion}"/>
+                    <input type="hidden" th:field="*{codigocapacitacion}"/>
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Nombre de Capacitacion:</label>
+                        <div class="col-sm-10">
+                            <input type="text" size="50" maxlength="50"  class="form-control" required="true" th:field="*{nombrecapacitacion}"/>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Descripcion Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{descripcioncapacitacion}"/>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Descripcion Capacitacion:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" size="500" maxlength="500"  required="true" th:field="*{descripcioncapacitacion}"/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                <label class="col-sm-2 control-label">Categoria Capacitacion(*):</label>
-                <div class="col-sm-7">
-                    <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                    <select class="form-control" name="categoriacapacitacion" >
-                        <option>Desarrollo laboral</option>
-                        <option>Desarrollo Personal</option>
-                        <option>Desarrollo Social</option>
-                        <option>Desarrollo del pensamiento</option>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Categoria Capacitacion(*):</label>
+                        <div class="col-sm-7">
+                            <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
+                            <select class="form-control"   required="true"  name="categoriacapacitacion" >
+                                <option>Desarrollo laboral</option>
+                                <option>Desarrollo Personal</option>
+                                <option>Desarrollo Social</option>
+                                <option>Desarrollo del pensamiento</option>
 
-                    </select>
-                </div>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Descripcion Categoria:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" size="500" maxlength="500"  required="true" th:field="*{descripcioncategoria}"/>
+                        </div>
+                    </div>
+
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Departamento Responsable(*):</label>
+                        <div class="col-sm-7">
+                            <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
+                            <select class="form-control" required="true"  name="departamentoresponsable" >
+                                <option>Recursos humanos</option>
+                                <option>Finanzas</option>
+                                <option>Contabilidad</option>
+
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Duracion de Capacitacion en Horas:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" maxlength="4" th:field="*{duracionhoracapacitacion}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Duracion de Capacitacion en Dias:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" required="true" maxlength="3" th:field="*{duraciondiacapacitacion}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Organismo Patrocianador:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control"size="200" maxlength="200"  required="true" th:field="*{organismopatrocinador}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Tipo Evento:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control"required="true" size="200" maxlength="200"  th:field="*{tipoevento}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Especialidad de Evento:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" required="true" size="200" maxlength="200"  th:field="*{especialidadevento}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Pais de realizacion de Capacitacion:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" required="true" size="100" maxlength="100"  th:field="*{paiscapacitacion}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Fecha Desde:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" required="true" th:field="*{fechacapacitaciondesde}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Fecha  Hasta:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" required="true" th:field="*{fechacapacitacionhasta}"/>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Tipo de Capacitacion:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" size="20" maxlength="20"  required="true"th:field="*{tipocapacitacion}"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Estado de la Capacitacion:</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control numeros" th:field="*{estadocapacitacion}"/>
+                        </div>
+                    </div>
+                    
+                  
+                    <div class="form-group">
+                        <label class="col-sm-2 control-label">Capacitador:</label>
+                        <div class="col-sm-10">
+                                                    <!--<input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>-->
+
+                            <select class="form-control" th:field="*{codigocapacitador.codigocapacitador}" >
+                                <option th:each="c:${capacitadores}" th:value="${c.codigocapacitador}" th:text="${c.nombrecapacitador}"></option>
+                            </select>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-12">
+                        <div class="row" align="center">
+                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitaciones/}">Regresar</a></button>
+                            <button type="submit" class="btn btn-default">Guardar</button>
+                            <button type="reset" class="btn btn-default">Limpiar</button>
+                        </div>
+                    </div>
+
+                </form>
             </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Descripcion Categoria:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{descripcioncategoria}"/>
-                    </div>
-                </div>
 
 
-                <div class="form-group">
-                <label class="col-sm-2 control-label">Departamento Responsable(*):</label>
-                <div class="col-sm-7">
-                    <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                    <select class="form-control" name="departamentoresponsable" >
-                        <option>Recursos humanos</option>
-                        <option>Finanzas</option>
-                        <option>Contabilidad</option>
-
-                    </select>
-                </div>
-            </div>
-
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Duracion de Capacitacion en Horas:</label>
-                    <div class="col-sm-10">
-                        <input type="number" class="form-control" th:field="*{duracionhoracapacitacion}"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Duracion de Capacitacion en Dias:</label>
-                    <div class="col-sm-10">
-                        <input type="number" class="form-control" th:field="*{duraciondiacapacitacion}"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Organismo Patrocianador:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{organismopatrocinador}"/>
-                    </div>
-                </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Evento:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{tipoevento}"/>
-                    </div>
-                </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Especialidad de Evento:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{especialidadevento}"/>
-                    </div>
-                </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Pais de realizacion de Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{paiscapacitacion}"/>
-                    </div>
-                </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Fecha Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{fechacapacitacion}"/>
-                    </div>
-                </div>
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo de Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:field="*{tipocapacitacion}"/>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">Estado de la Capacitacion:</label>
-                    <div class="col-sm-10">
-                        <input type="number" class="form-control" th:field="*{estadocapacitacion}"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">CodigoCapacitador:</label>
-                    <div class="col-sm-10">
-                        <input type="number" class="form-control" th:field="*{codigocapacitador.codigocapacitador}"/>
-                    </div>
-                </div>
-                
-
-                <div class="row">
-                    <button type="submit" class="btn btn-default">Agregar</button>
-                </div>
-            </form>
         </div>
     </div>
+    <div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+        
+    </div>  
+    <script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../capacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script>    
     <script>
         $(document).ready(function () {
-            $('#fechacapacitacion').datepicker({
+            $('#fechacapacitaciondesde').datepicker({
                 dateFormat: 'yy-mm-dd'
             });
 
-            $('#fechahastacomite').datepicker({
+            $('#fechacapacitacionhasta').datepicker({
                 dateFormat: 'yy-mm-dd'
             });
         });
     </script>
+    
 
 </body>	
 </html>
