--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -6,30 +6,36 @@
 </head>
 <body>
 <div class="container">
-    Listado de Capacitadores
+   
     <div th:if="${not #lists.isEmpty(capacitadores)}">
-        <h2>Listado de Capacitadores</h2>
+        <h3 align="center">Listado de Capacitadores</h3>
         <table class="table table-striped">
             <tr>
                 <th>Codigo</th>
-                <th>Nombre</th>
+                <th>Responsable del Capacitador</th>
+                <th>Nombre de Capacitador</th>
                 <th>Tema Dominio</th>
+                <th>Institucion</th>
                 <th>Tipo Capacitador</th>
-                  <th>Tipo Capacitador</th>
+                <th>Tipo Agrupacion</th>
                   <th>Dui</th>
                   <th>Nit</th>
                   <th>Carnet Residente</th>
                   <th>Telefono</th>
                   <th>Celular</th>
                   <th>Email</th>
-                  <th>Codigo Empleado</th>
+<!--                  <th>Codigo Empleado</th>-->
                   <th>Acciones</th>
             </tr>
             <tr th:each="capacitador : ${capacitadores}">
                 <td th:text="${capacitador.codigocapacitador}">Codigo</td>
+                 <td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>
+                
                 <td th:text="${capacitador.nombrecapacitador}">Nombre</td>
                 <td th:text="${capacitador.temadominio}">Tema</td>
-                <td th:text="${capacitador.tipocapacitador}">Tipo</td>
+                <td th:text="${capacitador.institucioncapacitador}">Institucion</td>
+                <td th:text="${capacitador.tipocapacitador}">Tipo Capacitador</td>
+                 <td th:text="${capacitador.tipoagrupacion}">Tipo Agrupacion</td>
                 <td th:text="${capacitador.duicapacitador}">Dui</td>
                 <td th:text="${capacitador.nitcapacitador}">Nit</td>
                 <td th:text="${capacitador.carnetresidencia}">Carnet</td>
@@ -38,13 +44,56 @@
                 <td th:text="${capacitador.emailcapacitador}">Email</td>
 <!--                <td th:text="${capacitador.codigoempleado.codigoempleado}">Email</td>-->
                 
-                <td><a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-default">Mostrar</a>
+                <td>
+                    <a th:href="${'./show/' + capacitador.codigocapacitador}" class="btn btn-default">Mostrar</a>
                 <a th:href="${'./edit/' + capacitador.codigocapacitador}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + capacitador.codigocapacitador}" class="btn btn-danger">Delete</a>
+                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${capacitador.codigocapacitador} + '\');'" >Delete</a></td>
+                <!--<a th:href="${'./delete/' + capacitador.codigocapacitador}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
         </table>
     </div>
 </div>
+    <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../capacitadores/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </body>
 </html>
