--- a/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorshow.html
@@ -1,89 +1,123 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>SISADMRH</title>
-     <th:block th:include="../templates/header"></th:block>
- 
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
 
-  
+
+
 </head>
 <body>
-<div class="container">
-    <h2>Datos de Usuario</h2>
+  <div class="row">
+ <div class="col-md-3">
+            <th:block th:include="../templates/menu"></th:block>
+        </div>
+        <div class="col-md-8">
+        <h3 align="center">Datos de Capacitador</h3>
         <div>
             <form class="form-horizontal">
-                
+
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo Capacitador:</label>
+                    <label class="col-sm-2 control-label">Codigo capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.codigocapacitador}">Usuario Id</p></div>
+                        <p class="" th:text="${capacitador.codigocapacitador}">codigo capacitador</p></div>
+                    <!--<p class="" th:text="${capacitador.codigoempleado.nombreempleado}">codigo capacitador</p></div>-->
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Nombre:</label>
+                    <label class="col-sm-2 control-label">Nombre Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.nombrecapacitador}">Nombre</p>
+                        <p class="" th:text="${capacitador.nombrecapacitador}">Nombre</p>
                     </div>
                 </div>
+  <div class="form-group">
+                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Tema de dominio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.temadominio}">Tema de dominio</p>
+                        <p class="" th:text="${capacitador.temadominio}">Tema de dominio</p>
+                    </div>
+                </div>
+                         <div class="form-group">
+                    <label class="col-sm-2 control-label">Institucion:</label>
+                    <div class="col-sm-10">
+                        <p class="" th:text="${capacitador.institucioncapacitador}">Institucion</p>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Tipo Capacitador:</label>
+                    <label class="col-sm-2 control">Tipo Capacitador:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
+                        <p class="" th:text="${capacitador.tipocapacitador}">Tipo Capacitador</p>
+                    </div>
+                </div>
+                     <div class="form-group">
+                    <label class="col-sm-2 control">Tipo Agrupacion:</label>
+                    <div class="col-sm-10">
+                        <p class="" th:text="${capacitador.tipoagrupacion}">Tipo Capacitador</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Dui:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.duicapacitador}">Dui</p>
+                        <p class="" th:text="${capacitador.duicapacitador}">Dui</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Nit:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.nitcapacitador}">Nit</p>
+                        <p class="" th:text="${capacitador.nitcapacitador}">Nit</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Carnet de Residencia:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
+                        <p class="" th:text="${capacitador.carnetresidencia}">Carnet de Residencia</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Telefono Fijo:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
+                        <p class="" th:text="${capacitador.telefonocapacitador}">Telefono Fijo</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">Telefono Movil:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
+                        <p class="" th:text="${capacitador.telefonomovilcapacitador}">Telefono Movil</p>
                     </div>
                 </div>
-                
-                 <div class="form-group">
+
+                <div class="form-group">
                     <label class="col-sm-2 control-label">Correo Electronico:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
+                        <p class="" th:text="${capacitador.emailcapacitador}">Correo Electronico</p>
                     </div>
                 </div>
-<!--                 <div class="form-group">
-                    <label class="col-sm-2 control-label">Codigo Empleado</label>
-                    <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>
-                    </div>
-                </div>-->
-                
+                               <div class="form-group">
+                                    <label class="col-sm-2 control-label">EmpleadoCapacitador</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${capacitador.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
+              
             </form>
-    </div>
-</div>
+              <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/capacitadores/}">Regresar</a></button>
 
+                    </div>
+                </div>
+        </div>
+    </div>
+        </div>
+<div class="col-md-12">
+        <th:block th:include="../templates/footer"></th:block>
+    </div>
 </body>
 </html>
