--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+   <script type="text/javascript" th:src="@{/validacion_controladores.js}"></script>
+   <script type="text/javascript" th:src="@{/validacion_controladores2.js}"></script>
+   <script type="text/javascript" th:src="@{/SweetAlert.min.js}"></script>
+   <script type="text/javascript" th:src="@{/jquery-ui.min.js}"></script>
   
 <head lang="en">
 
@@ -7,36 +11,60 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
+    <div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+             <h3 align="center" >Llene El Formulario de Comite</h3>
     <div>
         <form class="form-horizontal" th:object="${comite}" th:action="@{../comite}" method="post">
-          <input type="hidden" th:field="*{codigocomite}"/>
+<!--          <input type="hidden" th:field="*{codigocomite}"/>-->
             <!--  <input type="hidden" th:field="*{nombrecomite}"/>-->
-            
+             <div class="form-group">
+                <label class="col-sm-2 control-label">DUI:</label>
+                <div class="col-sm-10">
+                    <input type="text" size="17" maxlength="17" class="form-control num_dui" id="dui" placeholder="XXXXXXX-X" th:field="*{dui}"/>
+                </div>
+            </div>
+             <div class="form-group">
+                <label class="col-sm-2 control-label">NIT:</label>
+                <div class="col-sm-10">
+                    <input type="text"  class="form-control num_nit"  id="nit"  placeholder="XXXX-XXXXXX-XXX-X"  th:field="*{nit}"/>
+                </div>
+            </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de comite:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrecomite}"/>
+                    <input type="text" class="form-control" size="30" maxlength="30" required="true" placeholder="Escriba El nombre del Comite"  th:field="*{nombrecomite}"/>
                 </div>
             </div>
             <div class="form-group">
+                <label class="col-sm-2 control-label">Responsable del Comite:</label>
+                                     <div class="col-sm-10">
+                                         <select class="form-control" th:field="*{codigoempleado.codigoempleado}" >
+                                <option th:each="c:${empleados}" placeholder="Seleccione El Responsable del Comite" th:value="${c.codigoempleado}" th:text="${c.nombreempleado}"></option>
+                            </select>
+               <!--<input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>-->
+                                          </div>
+                                </div>
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Responsable:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{responsablecomite}"/>
+                    <input type="text" class="form-control" required="true"placeholder="Escriba El Responsable del Comite" th:field="*{responsablecomite}"/>
                 </div>
-            </div>
+            </div>-->
             
             <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion:</label>
+                <label class="col-sm-2 control-label ">Descripcion:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{desripcioncomite}"/>
+                    <input type="text" class="form-control"required="true" size="100" maxlength="100" placeholder="Escriba la Descripcion del comite" th:field="*{desripcioncomite}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Numero de acuerdo:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{numeroacuerdocomite}"/>
+                    <input type="text" class="form-control numeros" required="true" placeholder="Escriba solo Numeros Positivos"  th:field="*{numeroacuerdocomite}"/>
                 </div>
             </div>
             
@@ -44,28 +72,23 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Miembros maximos:</label>
                 <div class="col-sm-10">
-                    <input type=number class="form-control" th:field="*{miembromaximo}"/>
+                    <input type="text" class="form-control numeros" required="true" placeholder="Escriba solo Numeros Positivos"  th:field="*{miembromaximo}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Desde:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdecomite}"/>
+                    <input type="text" class="form-control"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechadesdecomite}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Hasta:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastacomite}"/>
+                    <input type="text" class="form-control "  placeholder="YYYY-MM-DD" required="true" th:field="*{fechahastacomite}"/>
                 </div>
             </div>
-        <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo empleado:</label>
-                                     <div class="col-sm-10">
-               <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                          </div>
-                                </div>
+        
             
 <!--            <div class="row">
                 
@@ -80,8 +103,16 @@
     </div>
         </form>
     </div>
-</div>
-<script>
+
+            
+        </div>
+    </div>
+   </div>
+  <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>  
+
+   <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
             dateFormat: 'yy-mm-dd'
@@ -91,7 +122,34 @@
             dateFormat: 'yy-mm-dd'
         });
     });
+    
 </script>
 
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
+
+		
+                
 </body>	
 </html>
