--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -15,7 +15,10 @@
                     <h3 align="center">Listado de Comites</h3>
                     <table class="table table-striped">
                         <tr>
-                            <th>Codigo</th>
+                             <th>Codigo</th>
+                            <th>DUI</th>
+                            <th>Nit</th>
+                           
                             <th>Nombre</th>
                             <th>Responsable</th>
                             <th>Descripcion</th>
@@ -23,23 +26,27 @@
                             <th>Miembros maximos</th>
                             <th>F. desde</th>
                             <th>F. hasta</th>
-                            <th>descripcion</th>
+                            
                             <th>Acciones</th>
 
                         </tr>
                         <tr th:each="comite : ${comites}">
                             <td th:text="${comite.codigocomite}">Codigo</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
+                            <td th:text="${comite.dui}">DUI</td>
+                            <td th:text="${comite.nit}">NIT</td>
                             <td th:text="${comite.responsablecomite}">Responsable</td>
                             <td th:text="${comite.desripcioncomite}">Descripcion</td>
                             <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
                             <td th:text="${comite.miembromaximo}">Miembro maximo</td>
                             <td th:text="${comite.fechadesdecomite}">F. desde</td>
                             <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
+<!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
 
                             <td><a th:href="${'./show/' + comite.codigocomite}" class="btn btn-default">Mostrar</a>
                             <a th:href="${'./edit/' + comite.codigocomite}" class="btn btn-default">Edit</a>
-                            <a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>
+                           <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${comite.codigocomite} + '\');'" >Delete</a></td>
+                            <!--<a th:href="${'./delete/' + comite.codigocomite}" class="btn btn-danger">Delete</a></td>-->
                         </tr>
                     </table>
                 </div>
@@ -49,5 +56,46 @@
             </div>     
     </div>
 <!--</div>-->
+ <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../comites/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </body>
 </html>
