--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -7,8 +7,14 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>detalle comite</h2>
+<div class="row">
+        
+         <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+          <h3 align="center">Costos de Capacitaciones</h3>
     <div>
         <form class="form-horizontal" th:object="${costocapacitacion}" th:action="@{../costocapacitacion}" method="post">
           <input type="hidden" th:field="*{codigocostocapacitacion}"/>
@@ -17,26 +23,30 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Por Persona:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{costopersona}"/>
+                    <input type="text" class="form-control num_decimal" required="true" maxlength="6" th:field="*{costopersona}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Numero de Personas:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{numeropersona}"/>
+                    <input type="text" class="form-control numeros" required="true" maxlength="2" th:field="*{numeropersona}"/>
                 </div>
             </div>
             
             <div class="form-group">
                 <label class="col-sm-2 control-label">Costo Capacitador:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{costocapacitador}"/>
+                    <input type="text" class="form-control num_decimal"  required="true" maxlength="6" th:field="*{costocapacitador}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">codigo de Capacitacion:</label>
+                <label class="col-sm-2 control-label">Capacitacion:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>
+                    <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                         <option value="0">-- Seleccione la Capacitacion --</option>
+                                <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
+                            </select>
+                    <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
                 </div>
             </div>
             
@@ -44,12 +54,22 @@
            
         
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/costocapacitaciones/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
-        </form>
     </div>
-</div>
+        </form>
+    </div>  
+        </div>
+    </div>
+    
+ <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>   
+    
 <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
@@ -60,6 +80,30 @@
             dateFormat: 'yy-mm-dd'
         });
     });
+    
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../costocapacitaciones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script>
 </script>
 
 </body>	
