--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoshow.html
@@ -1,60 +1,80 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>SISADMRH</title>
-     <th:block th:include="../templates/header"></th:block>
- 
+        <title>SISADMRH</title>
+    <th:block th:include="../templates/header"></th:block>
 
-  
+
+
 </head>
 <body>
-<div class="container">
-    <h2>Datos de Cuadros directivos</h2>
+ <div class="row">
+       <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+      <div class="col-md-8">
+        <h3 align="center">Datos de Cuadros directivos</h3>
         <div>
             <form class="form-horizontal">
-                
+
                 <div class="form-group">
                     <label class="col-sm-2 control-label">codigo</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.codigocuadrodirectivo}">cuadro Id</p></div>
                 </div>
-                <div class="form-group">
+<!--                <div class="form-group">
                     <label class="col-sm-2 control-label">Responsable:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.responsablecuadrodirectivo}">Responsable</p>
                     </div>
-                </div>
+                </div>-->
+ <div class="form-group">
+                                    <label class="col-sm-2 control-label">Responsable</label>
+                                    <div class="col-sm-10">
+                                        <p class="form-control-static" th:text="${cuadrodirectivo.codigoempleado.nombreempleado}">Codigo Empleado</p>
+                                         <!--<p class="form-control-static" th:text="${capacitador.codigoempleado.codigoempleado}">Codigo Empleado</p>-->
+                                    </div>
+                                </div>
                 <div class="form-group">
                     <label class="col-sm-2 control-label">area:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.area}">area</p>
                     </div>
                 </div>
-                
-                 <div class="form-group">
+
+                <div class="form-group">
                     <label class="col-sm-2 control-label">Descripcion:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${cuadrodirectivo.desripcioncuadrodirectivo}">Descripcion</p>
                     </div>
                 </div>
                 
-                 <div class="form-group">
-                    <label class="col-sm-2 control-label">contraseña:</label>
+               
+              
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha de Presentacion:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" th:text="${#calendars.format(cuadrodirectivo.fechapresentacion, 'dd-MMM-yyyy')}">Valor de estado</p>
                     </div>
                 </div>
-              
-               <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
-               
+                    <!--jala los empleados-->
                 
-            
+
             </form>
+            <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/cuadrodirectivos/}">Regresar</a></button>
+
+                    </div>
+                </div>
+        </div>
     </div>
-</div>
+      <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div>
+ </div>
 
 </body>
 </html>
