--- a/src/main/resources/templates/fragments/estado/estadoform.html
+++ b/src/main/resources/templates/fragments/estado/estadoform.html
@@ -6,56 +6,71 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Detalle de estados</h2>
+ <div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            <h3 align="center" >Detalle de estados</h3>
     <div>
         <form class="form-horizontal" th:object="${estado}" th:action="@{../estado}" method="post">
-            <input type="hidden" th:field="*{codigoestado}"/>
-            <input type="hidden" th:field="*{nombreestado}"/>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">COdigo de estado:</label>
+<!--            <input type="hidden" th:field="*{codigoestado}"/>
+            <input type="hidden" th:field="*{nombreestado}"/>-->
+<!--            <div class="form-group">
+                <label class="col-sm-2 control-label">Codigo de estado:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigoestado}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de estado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombreestado}"/>
+                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{nombreestado}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Valor de estado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{valorestado}"/>
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{valorestado}"/>
                 </div>
             </div>
-            
-<!--            <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha ingreso:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechaingreso}"/>
-                </div>
+      
+           <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/estados/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de caducidad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechacaducidad}"/>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">fecha de baja:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechabaja}"/>
-                </div>
-            </div>-->
-
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
+    </div>
         </form>
     </div>
-</div>
+ 
+            
+        </div>
+    </div>
+   
 
 </body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if ([[${msg}]] === 0){
+    swal({
+    title: "Exito!",
+            text: "Registro agregado correctamente",
+            type: "success"
+    }).then(function() {
+    location.href = '../estados/';
+    });
+    }
+
+    if ([[${msg}]] === 1){
+    swal({
+    title: "ERROR!",
+            text: "Ocurrio un error en el proceso",
+            type: "error"
+    });
+    }
+    });</script> 
+<script>th:href = "@{/css/bootstrap.min.css}" / ></script>
+<script>th:href = "@{/css/jquery-ui.min.css}" / ></script>
 </html>
