--- a/src/main/resources/templates/fragments/estado/estados.html
+++ b/src/main/resources/templates/fragments/estado/estados.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="container">
-    e aqui
+   
     <div th:if="${not #lists.isEmpty(estados)}">
-        <h2>Todos los Estados</h2>
+        <h3  align="center">Lista de Estados</h3>
         <table class="table table-striped">
             <tr>
                 <th>Codigo</th>
@@ -26,11 +26,53 @@
                 
                 <td><a th:href="${'./show/' + estado.codigoestado}" class="btn btn-default">Mostrar</a>
                 <a th:href="${'./edit/' + estado.codigoestado}" class="btn btn-default">Edit</a>
-                <a th:href="${'./delete/' + estado.codigoestado}" class="btn btn-danger">Delete</a>
+                <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${estado.codigoestado} + '\');'" >Delete</a></td>
+                <!--<a th:href="${'./delete/' + estado.codigoestado}" class="btn btn-danger">Delete</a>-->
                 </td>
             </tr>
         </table>
     </div>
 </div>
+     <script th:inline="javascript">
+        $(document).ready(function () {
+    if([[${msg}]]===3){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro Eliminado correctamente",
+                type: "success",
+                icon: "success",
+       }).then(function() {
+                location.href = '../../roles/';
+       }); 
+}
+    
+    if([[${msg}]]===4){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error al eliminar el registro",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+        
+        function eliminar(id) {
+            swal({
+                title: "Desea Eliminar?",
+                text: "favor confirme que desea eliminar este registro!",
+                icon: "warning",
+                buttons: true,
+                dangerMode: true,
+            })
+                    .then((willDelete) => {
+                        if (willDelete) {
+                            location.href = './delete/' + id;
+                        } else {
+                            swal("Accion cancelada", "se ha cancelado la operaacion de eliminado", "error");
+                        }
+                    });
+        }
+    </script>
 </body>
 </html>
