--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -6,79 +6,134 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Detalle niveles de escolaridad</h2>
+<div class="row">
+        <div class="col-md-3">
+         <th:block th:include="../templates/menu"></th:block>
+    </div> 
+        <div class="col-md-8">
+            
+            <h3 align="center">Nuevo Nivel de Escolaridad</h3>
     <div>
         <form class="form-horizontal" th:object="${nivelescolaridad}" th:action="@{../nivelescolaridad}" method="post">
           
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de nivel escolaridad:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigonivelnivelescolaridad}"/>
                 </div>
+            </div>-->
+<div class="form-group">
+                <label class="col-sm-2 control-label">Estudios realizados:(*)</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{estudiorealizado}"/> 
+                </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Centro educativo:</label>
+                <label class="col-sm-2 control-label">Nombre de Centro educativo:(*)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{centroeducativo}"/>
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{centroeducativo}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Anos aprobados:</label>
                 <div class="col-sm-10">
-                    <input type="number" class="form-control" th:field="*{aniosaprobados}"/>
+                    <input type="text" class="form-control numeros" maxlength="2"th:field="*{aniosaprobados}"/>
                 </div>
             </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Estudios realizados:</label>
+             <div class="form-group">
+                <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{estudiorealizado}"/>
+                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{paisnivelescolaridad}"/>
                 </div>
             </div>
-            
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Fecha desde nivel escolar:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control " required="true" th:field="*{fechadesdenivelescolaridad}"/>
+                </div>
+            </div>
+             <div class="form-group">
+                <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control " th:field="*{fechahastanivelescolaridad}"/>
+                </div>
+            </div>
              <div class="form-group">
                 <label class="col-sm-2 control-label">Finalizado:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{finalizado}"/>
+                    <select class="form-control"  required="true" name="finalizado" >
+                        <option>Si</option>
+                        <option>No</option>
+                       
+
+                    </select>
+                    <!--<input type="text" class="form-control" th:field="*{finalizado}"/>-->
                 </div>
             </div>
             
              <div class="form-group">
                 <label class="col-sm-2 control-label">Titulo Obtenido:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{tituloobtenido}"/>
-                </div>
-            </div>
-            
-             <div class="form-group">
-                <label class="col-sm-2 control-label">Pais Nivel escolaridad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{paisnivelescolaridad}"/>
-                </div>
-            </div>
-            
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Fecha desde nivel escolar:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechadesdenivelescolaridad}"/>
+                    <input type="text" class="form-control" required="true" size="50" maxlength="50" th:field="*{tituloobtenido}"/>
                 </div>
             </div>
             
             
-             <div class="form-group">
-                <label class="col-sm-2 control-label">fecha hasta nivel escolaridad:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{fechahastanivelescolaridad}"/>
-                </div>
-            </div>
             
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
+            
+            
+            
+            
+            
+            <div class="col-md-12">
+            <div class="row" align="center">
+                <button type="button" class="btn btn-default"><a href="#" th:href="@{/nivelescolaridades/}">Regresar</a></button>
+                <button type="submit" class="btn btn-default">Guardar</button>
+                <button type="reset" class="btn btn-default">Limpiar</button>
             </div>
+    </div>
         </form>
     </div>
-</div>
+  
+        </div>
+    </div>
+  <div class="col-md-12">
+            <th:block th:include="../templates/footer"></th:block>
+        </div> 
+    <script>
+    $(document).ready(function () {
+        $('#fechadesdenivelescolaridad').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        $('#fechahastanivelescolaridad').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+    });
+</script>
 
 </body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../nivelescolaridades/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script>  
 </html>
