--- a/src/main/webapp/WEB-INF/reports/comites/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/comites/rpt_comites.jrxml
@@ -1,140 +1,199 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="f3437bb1-7b5b-4e71-9370-31f0c09403d0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="278e8c75-ccfd-47d2-98c9-f643bb2526f5">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.x" value="74"/>
+	<property name="ireport.y" value="65"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<parameter name="FECHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
-	<parameter name="FECHAFIN" class="java.lang.String"/>
+	<parameter name="FECHAFIN" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
-		<![CDATA[SELECT
-     empleado.`nombreempleado` AS empleado_nombreempleado,
-     comite.`numeroacuerdocomite` AS acuerdo,
-     comite.`fechahastacomite` AS comite_fechahastacomite,
-     comite.`nombrecomite` AS comite_nombrecomite,
-     comite.`fechadesdecomite` AS comite_fechadesdecomite
-FROM
-     `empleado` empleado INNER JOIN `comite` comite ON empleado.`codigoempleado` = comite.`codigoempleado`
-WHERE
-     comite.codigocomite = $P{CODIGO}
-     and comite.fechadesdecomite >= $P{FECHAINICIO}
-     and comite.fechahastacomite <= $P{FECHAFIN}]]>
+		<![CDATA[select COUNT(c.codigocomite), e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
+	 inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
+WHERE c.codigocomite=$P{CODIGO}
+and c.fechadesdecomite>=$P{FECHAINICIO} and c.fechahastacomite<=$P{FECHAFIN}]]>
 	</queryString>
-	<field name="empleado_nombreempleado" class="java.lang.String"/>
-	<field name="acuerdo" class="java.lang.Integer"/>
-	<field name="comite_fechahastacomite" class="java.sql.Date"/>
-	<field name="comite_nombrecomite" class="java.lang.String"/>
-	<field name="comite_fechadesdecomite" class="java.sql.Date"/>
-	<group name="empleado_nombreempleado">
-		<groupExpression><![CDATA[$F{empleado_nombreempleado}]]></groupExpression>
-	</group>
+	<field name="COUNT(c.codigocomite)" class="java.lang.Long"/>
+	<field name="nombreempleado" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nombrepuesto" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="numeroacuerdocomite" class="java.lang.Integer">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="nombrecomite" class="java.lang.String">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="fechadesdecomite" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="fechahastacomite" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="107" splitType="Stretch">
 			<staticText>
-				<reportElement x="117" y="10" width="475" height="30" uuid="d221db1a-67a0-457b-9304-a3886e020f64"/>
+				<reportElement x="370" y="59" width="64" height="20" uuid="304b82b3-aab1-463e-9694-33abfc7fe7e5"/>
 				<textElement>
-					<font size="16" isBold="true"/>
+					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[MINISTERIO DE JUSTICIA Y SEGURIDAD PUBLICA]]></text>
+				<text><![CDATA[SISADMRH]]></text>
+			</staticText>
+			<image>
+				<reportElement x="10" y="15" width="178" height="70" uuid="348ab64e-cce5-4951-a403-86fa0bc5bf66"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="615" y="10" width="178" height="75" uuid="347547f0-dc3f-41d4-8948-1f14704edd30"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
+			</image>
+			<staticText>
+				<reportElement x="317" y="38" width="173" height="20" uuid="f438b45c-f9d7-41fa-a5f4-7f206290bb55"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="224" y="40" width="297" height="20" uuid="2edc3e00-7b11-45d4-be87-7568cf6023d7"/>
-				<text><![CDATA[REPORTE DE COMITES]]></text>
+				<reportElement x="316" y="15" width="173" height="20" uuid="40f82697-c982-4904-b58a-e10862ebb42f"/>
+				<textElement>
+					<font fontName="Times New Roman" size="12"/>
+				</textElement>
+				<text><![CDATA[Ministrio de Justicia y Segruridad Publica]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch">
-			<textField pattern="dd/MM/yyyy">
-				<reportElement x="679" y="15" width="100" height="20" uuid="ad9bca51-794c-4f34-a164-d4abe4f40d07"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
+		<band height="63" splitType="Stretch">
 			<staticText>
-				<reportElement x="610" y="15" width="100" height="20" uuid="bd2b85a5-659c-435b-bd0a-8d277005d97e"/>
-				<text><![CDATA[Fecha:]]></text>
-			</staticText>
-		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="61" splitType="Stretch">
-			<staticText>
-				<reportElement x="180" y="41" width="100" height="20" uuid="0bf94cae-17da-49d7-9d40-3600b4ca9f75"/>
-				<text><![CDATA[Empleado]]></text>
+				<reportElement x="346" y="3" width="100" height="20" uuid="d6efa5c7-dbba-405d-9829-27a7a3f4b04f"/>
+				<text><![CDATA[Reporte de Comites]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="280" y="41" width="100" height="20" uuid="fc5b296f-2080-4d1d-98d3-51de97f44014"/>
-				<text><![CDATA[Puesto]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="380" y="41" width="100" height="20" uuid="4d12fbca-beb1-4208-87d1-9952001ec525"/>
-				<text><![CDATA[N acuerdo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="480" y="40" width="99" height="21" uuid="f9ad448e-5df9-4ad8-b7a4-8678f4566c1f"/>
-				<text><![CDATA[Comite]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="579" y="41" width="100" height="20" uuid="945c39b5-d321-429e-81ce-4e490368ad2e"/>
+				<reportElement x="253" y="24" width="46" height="20" uuid="59f70a37-5027-4516-8e7a-f732b225dc77"/>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="679" y="41" width="100" height="20" uuid="9b31384d-4ee6-40a0-a49a-ce46cc215b7f"/>
+				<reportElement x="493" y="28" width="42" height="20" uuid="5085c6dc-8c3e-4489-9bb7-877db29d3a9e"/>
+				<text><![CDATA[Hasta]]></text>
+			</staticText>
+			<textField pattern="dd/MM/yyyy">
+				<reportElement x="700" y="7" width="100" height="20" uuid="a2546718-5c9f-4522-9773-582d0a4e0037"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="672" y="36" width="80" height="20" uuid="bcbc0d91-374e-411c-80c4-b35b6cb1ce67"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="752" y="36" width="40" height="20" uuid="3f516f8d-0af4-4aa0-9522-139cc9b5b20e"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="315" y="26" width="100" height="20" uuid="af5360d6-9a38-45c5-a78b-2724d1f35082"/>
+				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="550" y="28" width="100" height="20" uuid="2152763f-62ad-409a-9d65-ba9efc2967ba"/>
+				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageHeader>
+	<columnHeader>
+		<band height="35" splitType="Stretch">
+			<staticText>
+				<reportElement x="10" y="0" width="100" height="20" uuid="98c6f5fe-2226-4066-bb55-e2a3898f0904"/>
+				<text><![CDATA[Empleado]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="150" y="2" width="100" height="20" uuid="a7908f29-3b12-40b2-b81d-b15335932120"/>
+				<text><![CDATA[Puesto]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="269" y="2" width="100" height="20" uuid="158afa62-29e4-4b9b-a0f7-2042fd47375d"/>
+				<text><![CDATA[Acuerdo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="404" y="2" width="100" height="20" uuid="8087ad07-a921-406c-8d0f-77899f83f4b0"/>
+				<text><![CDATA[Comite]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="533" y="2" width="100" height="20" uuid="a2940d79-46ae-47ce-af86-6f85c8d61311"/>
+				<text><![CDATA[Desde]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="658" y="2" width="100" height="20" uuid="ecd6e0fa-1dcf-4520-9b63-6ab569846692"/>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="46" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<textField>
-				<reportElement x="180" y="0" width="100" height="20" uuid="69c6644a-c56c-439b-b242-61f430a98c99"/>
-				<textFieldExpression><![CDATA[$F{empleado_nombreempleado}]]></textFieldExpression>
+				<reportElement x="24" y="0" width="100" height="20" uuid="bf6ec7e6-318f-4342-974e-750425bf0e28"/>
+				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="280" y="0" width="100" height="20" uuid="78305bdd-89f2-4e6d-b656-0156c0a706c3"/>
-				<textFieldExpression><![CDATA[$F{empleado_nombreempleado}]]></textFieldExpression>
+				<reportElement x="150" y="6" width="100" height="20" uuid="8f4e1333-f5d7-4e63-bcce-67e3e5e1315e"/>
+				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="380" y="0" width="100" height="20" uuid="b0f3ddce-6150-459c-9567-4e1448dd04d5"/>
-				<textFieldExpression><![CDATA[$F{acuerdo}]]></textFieldExpression>
+				<reportElement x="269" y="7" width="100" height="20" uuid="272e4777-35e6-4548-a0e0-42b8ec54913b"/>
+				<textFieldExpression><![CDATA[$F{numeroacuerdocomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="480" y="0" width="100" height="20" uuid="d555774f-c17e-4cb8-a046-11638f343afe"/>
-				<textFieldExpression><![CDATA[$F{comite_nombrecomite}]]></textFieldExpression>
+				<reportElement x="404" y="7" width="100" height="20" uuid="1f812342-3610-4918-89ff-8400f3027546"/>
+				<textFieldExpression><![CDATA[$F{nombrecomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="579" y="0" width="100" height="20" uuid="217d6c2f-c00f-4be4-afa8-099a1f0b92f4"/>
-				<textFieldExpression><![CDATA[$F{comite_fechadesdecomite}]]></textFieldExpression>
+				<reportElement x="533" y="10" width="100" height="20" uuid="c9460eb6-1a38-4fa4-8781-a6780d6a0550"/>
+				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="679" y="0" width="100" height="20" uuid="e5cacc08-98e1-45f5-8b02-f71f202c55ee"/>
-				<textFieldExpression><![CDATA[$F{comite_fechahastacomite}]]></textFieldExpression>
+				<reportElement x="658" y="9" width="100" height="20" uuid="b7b3ab8b-b616-46ff-9a95-9d5e6f37e0c0"/>
+				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
-	</pageFooter>
-	<summary>
-		<band height="42" splitType="Stretch">
+		<band height="45" splitType="Stretch">
+			<line>
+				<reportElement x="6" y="4" width="786" height="1" uuid="93338fa3-83d8-40bf-b8ae-199064764896"/>
+			</line>
+			<staticText>
+				<reportElement x="16" y="13" width="100" height="20" uuid="71096c79-6793-41c8-869e-d877e08f49cb"/>
+				<text><![CDATA[Total de Registros]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="563" y="22" width="80" height="20" uuid="a6e1415f-14f3-47da-96b3-b6fafa72f046"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				<reportElement x="695" y="19" width="100" height="20" uuid="73d82459-7c40-44ac-9c93-a30915f8a1a8"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<textField evaluationTime="Report">
-				<reportElement x="643" y="22" width="114" height="20" uuid="06724156-11f5-4148-8d91-0b63a09fb931"/>
-				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			<textField>
+				<reportElement x="132" y="17" width="100" height="20" uuid="b8beb76e-5aea-4590-8a36-8d9b84297912"/>
+				<textFieldExpression><![CDATA[$F{COUNT(c.codigocomite)}]]></textFieldExpression>
 			</textField>
 		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="54" splitType="Stretch">
+			<staticText>
+				<reportElement x="287" y="17" width="229" height="20" uuid="80f194c1-3771-48f4-b565-2090e9dbcf89"/>
+				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
+			</staticText>
+		</band>
+	</pageFooter>
+	<summary>
+		<band height="42" splitType="Stretch"/>
 	</summary>
 </jasperReport>
